Refactor user-related fields and methods for consistency in naming conventions