@@ -8,7 +8,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 public class UserPrincipal implements UserDetails {
 
@@ -18,7 +17,7 @@ public class UserPrincipal implements UserDetails {
         this.user = user;
         this.authorities = this.user.getRoles().stream()
                 .map(role-> new SimpleGrantedAuthority(role.name()))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
@@ -38,7 +37,7 @@ public class UserPrincipal implements UserDetails {
     @Override
     @NonNull
     public String getUsername() {
-        return user.getUsername();
+        return user.getUserName();
     }
 
     @Override
